feat: Update simulation logic to be more coherent